--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -21,7 +21,12 @@
     "@vue/cli-plugin-eslint": "^4.5.9",
     "@vue/cli-service": "^4.5.9",
     "@vue/eslint-config-standard": "^6.0.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.16.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-vue": "^7.7.0",
     "stylus": "^0.54.8",
     "stylus-loader": "^3",
     "vue-template-compiler": "^2.6.12"
